syntax = "proto3";
package covid.parser;

option java_package = "edu.uw.bhi.bionlp.covid.parser.opennlp";

/* 
 * python3 -m grpc_tools.protoc -I ./ --python_out=. --grpc_python_out=. OpenNLP/OpenNLP.proto
 */

service OpenNLP {
    rpc DetectSentences (SentenceDetectionInput) returns (SentenceDetectionOutput);
}

/*
 * Sentence
 */
 message Sentence {
    int32 id = 1;
    int32 begin_char_index = 2;
    int32 end_char_index = 3;
    string text = 4;
}

message SentenceDetectionInput {
    string id = 1;
    string text = 2;
}

message SentenceDetectionOutput {
    string id = 1;
    string text = 2;
    repeated Sentence sentences = 3;
    repeated string errors = 4;
}